<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.1.0</version>
  <description>Custom position controller for PLR robot</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>

  <export>
    <controller_interface plugin="${prefix}/robot_controller.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
