<?xml version="1.0"?>
<package format="3">
  <name>robot_can_hardware</name>
  <version>0.1.0</version>
  <description>R6Bot CAN SystemInterface hardware plugin (fake CAN)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>fakecan</depend>

  <export>
    <hardware_interface plugin="${prefix}/robot_hardware.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
